--- a/bootstrap-ornek-site/index.html
+++ b/bootstrap-ornek-site/index.html
@@ -72,21 +72,12 @@
 
 <div class="container"> <!-- -- -- Container Start -- -- -->
 
-    <div class="row mt-5">   <!-- -- -- Abous Us Start -- -- -->
-
-        <div class="col-4">
-            <img class="w-100 img-thumbnail" src="https://picsum.photos/id/487/600/400" alt="">
-        </div>
-
-        <div class="col-8">
-            <h3>Hakkımızda</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores similique, fuga voluptatibus reiciendis quo saepe fugit, commodi illum fugiat amet omnis neque rerum et reprehenderit tempora ea tenetur dicta accusamus.</p>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellendus, veniam obcaecati laborum inventore maxime magni doloremque, ea laboriosam architecto, voluptatem nulla. Nulla, nostrum in officiis fugiat officia debitis reiciendis modi.</p>
-        </div>
-
-    </div>  <!-- -- -- Abous Us End -- -- -->
+    
 
     <div class="row mt-5">   <!-- -- -- Products Start -- -- -->
+        <div class="col-sm-12 text-center">
+            <h3>Ürünler</h3>
+        </div>
 
         <div class="col-sm-4">
             <div class="card">
@@ -123,7 +114,24 @@
 
     </div>  <!-- -- -- Products End -- -- -->
 
+    <div class="row mt-5">   <!-- -- -- Abous Us Start -- -- -->
+
+        <div class="col-4">
+            <img class="w-100 img-thumbnail" src="https://picsum.photos/id/487/600/400" alt="">
+        </div>
+
+        <div class="col-8">
+            <h3>Hakkımızda</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores similique, fuga voluptatibus reiciendis quo saepe fugit, commodi illum fugiat amet omnis neque rerum et reprehenderit tempora ea tenetur dicta accusamus.</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellendus, veniam obcaecati laborum inventore maxime magni doloremque, ea laboriosam architecto, voluptatem nulla. Nulla, nostrum in officiis fugiat officia debitis reiciendis modi.</p>
+        </div>
+
+    </div>  <!-- -- -- Abous Us End -- -- -->
+
     <div class="row mt-5">   <!-- -- -- Pictures Start -- -- -->
+        <div class="col-sm-12 text-center">
+            <h3>Resimler</h3>
+        </div>
         <div class="col-sm">
             <img src="https://picsum.photos/id/104/200/100" alt="" class="w-100 img-thumbnail">
         </div>
